tests/rosetta/out/Smalltalk/arena-storage-pool.out
/workspace/mochi/tests/rosetta/out/Smalltalk/arena-storage-pool.st:11: invalid assignment to argument p
/workspace/mochi/tests/rosetta/out/Smalltalk/arena-storage-pool.st:14: parse error, expected '|' or identifier
